<resources>

    <!-- App related Strings -->
    <string name="app_name">CoderUA</string>
    <string name="welcome_page">Coder UA</string>
    <string name="welcome_msg" translatable="false">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="using_google" translatable="false">Using Google</string>
    <string name="using_facebook" translatable="false">Using Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="type">Type</string>
    <string name="nmobs" translatable="false">Number of mobs caught</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="facebook_app_id">157929871485337</string>
    <string name="fb_login_protocol_scheme">fb157929871485337</string>

    <string name="complete_activity" translatable="false">Complete the following activity</string>
    <string name="monster_nearby" translatable="false">Monster near by !!!</string>
    <string name="wild_programmer" translatable="false">A wild programmer has appeared</string>
    <string name="mob_is" translatable="false">The mob is</string>
    <string name="you_caught_a_monster" translatable="false">You caught a monster</string>

    <!-- User actions -->
    <string name="shake" translatable="false">Shake your phone</string>
    <string name="tap" translatable="false">Tap fast</string>
    <string name="drag" translatable="false">Drag your finger</string>
    <string name="hold" translatable="false">Hold the mob</string>

    <!-- Messages -->
    <string name="catchMob" translatable="false">You caught a monster</string>
    <string name="OK">OK</string>

    <!-- Strings for bottom meny layout -->
    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_Skills">Skills</string>
    <string name="menu_codex">Codex</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="default_info_title" translatable="false">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>

    <!--String for topbar-->
    <string name="level">Lv. </string>

    <string name="pts" translatable="false">Upgrades available: </string>
    <string name="save" translatable="false">Save</string>
    <string name="question" translatable="false">Are you sure you want to make the upgrades added?</string>

    <!--Strings for skills page-->
    <string name="skills_menu">Skills Menu</string>
    <string name="spawn_string" translatable="false">Spawning distance</string>
    <string name="points_string" translatable="false">Number of points shown</string>
    <string name="rate_string" translatable="false">Rare Spawn Rate</string>
    <string name="range_string" translatable="false">Catching range</string>
</resources>
