<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorAccent">
        <Button
            android:id="@+id/home"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="@dimen/button_horizontal_margin"
            android:layout_marginLeft="@dimen/button_horizontal_margin"
            android:background="@drawable/circle"
            android:drawableTop="@drawable/home"
            android:text="@string/menu_home"
            android:textSize="10sp"
            android:onClick="goToHome"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/map"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="@dimen/button_horizontal_margin"
            android:layout_marginLeft="@dimen/button_horizontal_margin"
            android:background="@drawable/circle"
            android:drawableTop="@drawable/map"
            android:text="@string/menu_map"
            android:textSize="10sp"
            android:onClick="goToMap"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/skills"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="@dimen/button_horizontal_margin"
            android:layout_marginLeft="@dimen/button_horizontal_margin"
            android:background="@drawable/circle"
            android:drawableTop="@drawable/plus"
            android:text="@string/menu_Skills"
            android:textSize="10sp"
            android:onClick="goToSkills"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/codex"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="@dimen/button_horizontal_margin"
            android:layout_marginLeft="@dimen/button_horizontal_margin"
            android:background="@drawable/circle"
            android:drawableTop="@drawable/list"
            android:text="@string/menu_codex"
            android:textSize="10sp"
            android:onClick="goToCodex"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>