<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="bottom|center">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/home"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:background="@drawable/round_button"
                    android:drawableTop="@drawable/home"
                    android:text="@string/menu_home"
                    android:textSize="10sp"
                    android:onClick="goToHome"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/map"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:background="@drawable/round_button"
                    android:drawableTop="@drawable/map"
                    android:text="@string/menu_map"
                    android:textSize="10sp"
                    android:onClick="goToMap"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/skills"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:background="@drawable/round_button"
                    android:drawableTop="@drawable/plus"
                    android:text="@string/menu_Skills"
                    android:textSize="10sp"
                    android:onClick="goToSkills"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/codex"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:background="@drawable/round_button"
                    android:drawableTop="@drawable/list"
                    android:text="@string/menu_codex"
                    android:textSize="10sp"
                    android:onClick="goToCodex"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/settings"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:background="@drawable/round_button"
                    android:drawableTop="@drawable/gear"
                    android:text="@string/menu_settings"
                    android:textSize="10dp"
                    android:onClick="settings"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>