<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SkillsPage">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="145dp"
        android:layout_height="62dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/skills_menu"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spawn_string"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textAlignment="center"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spawnInfo"/>

                <ProgressBar
                    android:id="@+id/proximityBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="210dp"
                    android:layout_height="32dp"
                    android:max="100"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <Button
                    android:id="@+id/prox"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/plus"
                    android:onClick="proximity"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_string" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textAlignment="center"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/pointsInfo"/>

                <ProgressBar
                    android:id="@+id/pointsBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="210dp"
                    android:layout_height="32dp"
                    android:max="5"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <Button
                    android:id="@+id/pts"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/plus"
                    android:onClick="points"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_string"
                app:layout_constraintBottom_toTopOf="@+id/spawnBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pointsBar"
                app:layout_constraintVertical_bias="0.8" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textAlignment="center"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rareInfo"/>

                <ProgressBar
                    android:id="@+id/spawnBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="210dp"
                    android:layout_height="32dp"
                    android:max="20"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <Button
                    android:id="@+id/spwn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/plus"
                    android:onClick="spawn"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/range_string"
                app:layout_constraintBottom_toTopOf="@+id/spawnBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pointsBar"
                app:layout_constraintVertical_bias="0.8" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textAlignment="center"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rangeInfo"/>

                <ProgressBar
                    android:id="@+id/rangeBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="210dp"
                    android:layout_height="32dp"
                    android:max="10"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <Button
                    android:id="@+id/rng"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/plus"
                    android:onClick="range"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/bottombar"/>

    <include layout="@layout/topbar"
        android:id="@+id/include3"/>

    <TextView
        android:id="@+id/stringpts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pts"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        tools:layout_editor_absoluteX="148dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stringpts"
        app:layout_constraintBottom_toBottomOf="@+id/include3"
        android:layout_marginBottom="8dp"
        android:onClick="saveData"/>


</android.support.constraint.ConstraintLayout>

